--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <a class="nav-link btn btn__outline-accent" href="#">Kontakt</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">
+                  <a class="nav-link german-logo-link" href="#">
                     <img src="assets/images/germen-logo.svg" alt="made in germany" class="german-logo">
                   </a>
                 </li>
@@ -133,26 +133,27 @@
     <main>
       <!-- banner section start -->
       <section class="banner">
+        <div class="topbar">
+          <div class="bar bar-color"></div>
+          <div class="bar bar-color"></div>
+          <div class="bar bar-color"></div>
+          <div class="bar bar-color"></div>
+          <div class="bar bar-color"></div>
+          <div class="bar bar-color"></div>
+          <div class="bar bar-color"></div>
+        </div>
         <div class="container">
           <div class="row ">
-            <div class="col-12">
+            <div class="col-lg-4">
               <div class="section__content-wrapper">
                 <div class="section__content banner__content">
-                  <h1 class="banner__title text__light">
-                    <span class="text__accent">next level recruiting:</span> wo andere aufhören zu suchen, fangen wir erst richtig an.
+                  <h1 class="banner__title text-white">
+                    BRECON
                   </h1>
-                  <a href="#" class="btn btn__outline-accent">wir helfen weiter</a>
+                  <p class="section__title text-white">smarte Vibrations-Lösungen <br> für die Betonindustrie</p>
+                  <a href="#" class="btn btn__outline-light">zu den Produkten</a>
                 </div>
               </div>
-              <a href="#scroll">
-                <div
-                  class="scroll-container d-none d-lg-flex align-items-center flex-column"
-                >
-                  <div class="mouse">
-                    <div class="roll"></div>
-                  </div>
-                </div>
-              </a>
             </div>
           </div>
         </div>
@@ -167,67 +168,77 @@
 
     </main>
        <!-- footer section start -->
-       <footer class="footer bg__dark text__light">
+       <footer class="footer">
         <div class="container">
             <div class="row footer-content ">
                 <div class="col-lg-3 mb-5 mb-lg-0 ">
-                    <img src="assets/images/footer-logo.svg" alt="footer logo" class="img-fluid footer__logo">
-                </div>
-                <div class="col-lg-2 col-sm-6 ">
-                    <h3 class="footer__title">kontakt.</h3>
-                   <address>
-                    <p class="mb-0">bull research consulting</p>
-                    <p class="mb-0">pioneer park</p>
-                    <p class="mb-0">elly-heuss-knapp-straße 1</p>
-                    <p class="mb-0">63457 hanau</p>
-                   </address>
-                   <ul class="footer__list">
-                    <li class="list__item"><a href="tel:06181 982053-0" class="list__link">06181 / 982053-0</a></li>
-                    <li class="list__item"><a href="mailto:info@bull-research.com"  class="list__link text__accent">info@bull-research.com</a></li>
-                </ul>
+                    <img src="assets/images/BRECON-LOGO.svg" alt="footer logo" class="img-fluid footer__logo">
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <h3 class="footer__title">sitemap.</h3>
-                    <ul class="footer__list list--hover">
-                        <li class="list__item"><a href="#" class="list__link">leistungen</a></li>
-                        <li class="list__item"><a href="#" class="list__link">über uns</a></li>
-                        <li class="list__item"><a href="#" class="list__link">referenzen</a></li>
-                        <li class="list__item"><a href="#" class="list__link">schulungen</a></li>
-                        <li class="list__item"><a href="#" class="list__link">news</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <h3 class="footer__title">rechtliche hinweise.</h3>
-                    <ul class="footer__list list--hover">
-                        <li class="list__item"><a href="#" class="list__link">impressum</a></li>
-                        <li class="list__item"><a href="#" class="list__link">datenschutz</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-sm-6 pe-lg-0 mt-5 mt-lg-0">
-                    <ul class="footer__list d-flex flex-lg-column align-items-lg-end gap-3 list--social">
-                        <li class="list__item"><a href="#" class="list__link">
-                          <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
-                        </a></li>
-                        <li class="list__item"><a href="#" class="list__link">
-                          <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 320 512"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/></svg>
-                        </a></li>
-                        <li class="list__item"><a href="#" class="list__link">
-                          <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 448 512"><path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/></svg>
-                        </a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 d-lg-block d-none"></div>
-                <div class="col-lg-5 mt-5">
-                  <p class="mb-0">sie wünschen einen rückruf? nutzen sie dazu unseren <a href="#" class="text__accent">rückrufservice</a>.</p>
-                  <p class="mb-0">sie möchten ein angebot erhalten? nutzen sie dazu <a href="" class="text__accent">dieses formular</a>.</p>
-                </div>
-            </div>
+                  <ul class="footer__list list--hover">
+                      <li class="list__item"><a href="#" class="list__link">Über Uns</a></li>
+                      <li class="list__item"><a href="#" class="list__link">Know-how Center</a></li>
+                      <li class="list__item"><a href="#" class="list__link">Produkte</a></li>
+                      <li class="list__item"><a href="#" class="list__link">Anwendungen</a></li>
+                      <li class="list__item"><a href="#" class="list__link">Kontakt</a></li>
+                  </ul>
+              </div>
+              <div class="col-lg-3 col-sm-6">
+                <ul class="footer__list">
+                  <li class="list__item"><a href="tel:+49(0)221-9544270" class="list__link">Tel.: +49(0)221-9544270</a></li>
+                  <li class="list__item"><a href="mailto:mail@brecon.de"  class="list__link">E-Mail: mail@brecon.de</a></li>
+              </ul>
+              </div>
+                <div class="col-lg-3 col-sm-6 ">  
+                  <address>
+                   <p class="mb-0">BRECON Vibrationstechnik GmbH</p>
+                   <p class="mb-0">Stolberger Straße 393</p>
+                   <p class="mb-0">elly-heuss-knapp-straße 1</p>
+                   <p class="mb-0">D-50933 Köln</p>
+                  </address>
+               </div>     
+        </div>
+        </div>
+        <div class="copyright-wrapper">
+          <div class="container">
             <div class="copyright-section">
-               <p class="text-center mb-0">designed by <span class="text__accent">trendmarke</span></p>
+              <p class="text-center mb-0">BRECON Vibrationstechnik GmbH</p>
+              <a href="#top" class="back-to-top">
+               <svg xmlns="http://www.w3.org/2000/svg" width="20.139" height="18.896" viewBox="0 0 20.139 18.896">
+                 <g id="Icon_feather-arrow-up" data-name="Icon feather-arrow-up" transform="translate(2.121 1.5)">
+                   <path id="Pfad_1006" data-name="Pfad 1006" d="M18,23.4V7.5" transform="translate(-10.052 -7.5)" fill="none" stroke="#b3c8e6" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                   <path id="Pfad_1007" data-name="Pfad 1007" d="M7.5,15.448,15.448,7.5,23.4,15.448" transform="translate(-7.5 -7.5)" fill="none" stroke="#b3c8e6" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                 </g>
+               </svg>
+              </a>
+              <ul class="footer__list list--hover d-flex gap-2 mb-0">
+               <li class="list__item"><a href="#" class="list__link">impressum</a></li> |
+               <li class="list__item"><a href="#" class="list__link">datenschutz</a></li>
+                   </ul>
             </div>
+          </div>
         </div>
     </footer>
     <!-- footer section end -->
+    <div class="social-sidebar">
+      <div class="social-icon mail-icon">
+        <a href="#" >
+          <svg xmlns="http://www.w3.org/2000/svg" width="21.637" height="17.082" viewBox="0 0 21.637 17.082">
+            <g id="Group_322" data-name="Group 322" transform="translate(-12.252 -45.974)">
+              <path id="Path_1" data-name="Path 1" d="M4.885,6H19.967a1.891,1.891,0,0,1,1.885,1.885V19.2a1.891,1.891,0,0,1-1.885,1.885H4.885A1.891,1.891,0,0,1,3,19.2V7.885A1.891,1.891,0,0,1,4.885,6Z" transform="translate(10.645 40.974)" fill="none" stroke="#b3c8e6" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+              <path id="Path_2" data-name="Path 2" d="M21.852,9l-9.426,6.6L3,9" transform="translate(10.645 39.859)" fill="none" stroke="#b3c8e6" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+            </g>
+          </svg>
+        </a>
+      </div>
+      <div class="social-icon phone-icon">
+        <a href="#">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18.449" height="18.449" viewBox="0 0 18.449 18.449">
+            <path id="Icon_awesome-phone" data-name="Icon awesome-phone" d="M17.778.886,14.03.021a.87.87,0,0,0-.991.5L11.31,4.558a.863.863,0,0,0,.249,1.009l2.184,1.787a13.354,13.354,0,0,1-6.385,6.385L5.57,11.555a.864.864,0,0,0-1.009-.249L.526,13.036a.875.875,0,0,0-.5.994l.865,3.747a.864.864,0,0,0,.843.67A16.717,16.717,0,0,0,18.448,1.729.864.864,0,0,0,17.778.886Z" transform="translate(18.448 0.001) rotate(90)" fill="#b3c8e6"/>
+          </svg>
+        </a>
+      </div>
+    </div>
     <!-- jquery cdn -->
     <script
       src="https://code.jquery.com/jquery-3.7.0.min.js"
