--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <a class="nav-link" href="#">Download Center</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                  <a class="nav-link dropdown-toggle lang-link" href="#" id="dropdownId" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">DE</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <a class="dropdown-item" href="#">Action 1</a>
@@ -134,13 +134,13 @@
       <!-- banner section start -->
       <section class="banner">
         <div class="topbar">
-          <div class="bar bar-color"></div>
-          <div class="bar bar-color"></div>
-          <div class="bar bar-color"></div>
-          <div class="bar bar-color"></div>
-          <div class="bar bar-color"></div>
-          <div class="bar bar-color"></div>
-          <div class="bar bar-color"></div>
+          <div class="bar color-blue--dark"></div>
+          <div class="bar color-blue"></div>
+          <div class="bar color-blue--light"></div>
+          <div class="bar color-yellow"></div>
+          <div class="bar color-red"></div>
+          <div class="bar color-gray"></div>
+          <div class="bar color-gray--dark"></div>
         </div>
         <div class="container">
           <div class="row ">
