add technology section

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
     />
     <link rel="stylesheet" href="assets/css/header.min.css" />
     <link rel="stylesheet" href="assets/css/banner.min.css" />
-    <link rel="stylesheet" href="assets/css/job.min.css" />
-    <link rel="stylesheet" href="assets/css/reference.min.css" />
-    <link rel="stylesheet" href="assets/css/feature.min.css" />
-    <link rel="stylesheet" href="assets/css/services.min.css" />
-    <link rel="stylesheet" href="assets/css/blog.min.css" />
-    <link rel="stylesheet" href="assets/css/contact.min.css" />
+    <link rel="stylesheet" href="assets/css/technology.min.css" />
     <link rel="stylesheet" href="assets/css/footer.min.css" />
     <link rel="stylesheet" href="assets/css/style.min.css" />
   </head>
@@ -165,6 +160,25 @@
         </div>
       </section>
       <!-- banner section end -->
+
+      <!-- technology section start -->
+      <section class="technology block-margin">
+        <div class="container">
+          <div class="row flex-wrap-reverse">
+            <div class="col-lg-7 d-flex align-items-center">
+              <div class="technology__content">
+                <h2 class="text-accent">BRECON VIBRATIONSTECHNIK</h2>
+                <p>Als BOSCH Ausgründung liefert BRECON seit 1995 überragende Vibrationstechnik für die Betonverdichtung, Materialverdichtung, Fördertechnik und andere Anwendungen.</p>
+                <a href="#" class="btn btn__outline-accent">mehr über uns</a>
+              </div>
+            </div>
+            <div class="col-lg-5 mb-5 mb-lg-0">
+              <img src="assets/images/tech-img.png" alt="teach img" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- technology section end -->
 
     </main>
        <!-- footer section start -->
