add feature section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="assets/css/header.min.css" />
     <link rel="stylesheet" href="assets/css/banner.min.css" />
     <link rel="stylesheet" href="assets/css/technology.min.css" />
+    <link rel="stylesheet" href="assets/css/feature.min.css" />
     <link rel="stylesheet" href="assets/css/footer.min.css" />
     <link rel="stylesheet" href="assets/css/style.min.css" />
   </head>
@@ -146,7 +147,7 @@
                     BRECON
                   </h1>
                   <p class="section__title text-white">smarte Vibrations-Lösungen <br> für die Betonindustrie</p>
-                  <a href="#" class="btn btn__outline-light">zu den Produkten</a>
+                  <a href="#" class="btn btn__outline-white">zu den Produkten</a>
                 </div>
               </div>
             </div>
@@ -179,6 +180,41 @@
         </div>
       </section>
       <!-- technology section end -->
+
+      <!-- feature section start -->
+      <section class="feature bg__accent text-white">
+        <div class="container">
+          <div class="row"> 
+            <div class="col-lg-7">
+                <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#feature-tab1" type="button" role="tab" aria-controls="feature-tab1" aria-selected="true">BRECON führt die Produktlinie von BOSCH fort</button>
+                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#feature-tab2" type="button" role="tab" aria-controls="feature-tab2" aria-selected="false">Über BRECON: Rüttler und mehr</button>
+                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#feature-tab3" type="button" role="tab" aria-controls="feature-tab3" aria-selected="false">Aussenrüttler</button>
+                </div>
+            </div>
+            <div class="col-lg-5">
+              <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="feature-tab1" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
+                  <p class="mb-30">Als Hersteller modernster Rüttler und entsprechender Steuerungssysteme bieten wir unseren Kunden eine breite Produktpalette und innovative Lösungen. Dabei verstehen wir uns als langfristigen Partner für Engineering und kundenspezifische Produktentwicklung. </p>
+                  <p class="mb-30">BRECON Rüttler und Steuerungssysteme werden in Eigenfertigung in unserer Produktion nach höchsten Engineering- und Qualitätsstandards in Köln hergestellt.</p>
+                  <a href="#" class="btn btn__outline-light">mehr erfahren</a>
+                </div>
+                <div class="tab-pane fade" id="feature-tab2" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+                  <p class="mb-30">Als Hersteller modernster Rüttler und entsprechender Steuerungssysteme bieten wir unseren Kunden eine breite Produktpalette und innovative Lösungen. Dabei verstehen wir uns als langfristigen Partner für Engineering und kundenspezifische Produktentwicklung. </p>
+                  <p class="mb-30">BRECON Rüttler und Steuerungssysteme werden in Eigenfertigung in unserer Produktion nach höchsten Engineering- und Qualitätsstandards in Köln hergestellt.</p>
+                  <a href="#" class="btn btn__outline-light">mehr erfahren</a>
+                </div>
+                <div class="tab-pane fade" id="feature-tab3" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">
+                  <p class="mb-30">Als Hersteller modernster Rüttler und entsprechender Steuerungssysteme bieten wir unseren Kunden eine breite Produktpalette und innovative Lösungen. Dabei verstehen wir uns als langfristigen Partner für Engineering und kundenspezifische Produktentwicklung. </p>
+                  <p class="mb-30">BRECON Rüttler und Steuerungssysteme werden in Eigenfertigung in unserer Produktion nach höchsten Engineering- und Qualitätsstandards in Köln hergestellt.</p>
+                  <a href="#" class="btn btn__outline-light">mehr erfahren</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- feature section end -->
 
     </main>
        <!-- footer section start -->
