add know section

--- a/index.html
+++ b/index.html
@@ -216,6 +216,23 @@
       </section>
       <!-- feature section end -->
 
+      <!-- know section start  -->
+      <section class="know">
+        <div class="d-grid grid-cols-2">
+          <div class="left">
+            <img src="assets/images/know-img.png" alt="" class="img-fluid">
+          </div>
+          <div class="right d-flex align-items-center bg__gradient">
+            <div class="know__content">
+              <h2>Know-how Center</h2>
+              <p class="mb-30">Hier finden Sie Antworten auf ihre Fragen</p>
+              <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- know section end  -->
+
     </main>
        <!-- footer section start -->
        <footer class="footer">
