add products section

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="container">
           <div class="row flex-wrap-reverse">
             <div class="col-lg-7 d-flex align-items-center">
-              <div class="technology__content">
+              <div class="section__content-md">
                 <h2 class="text-accent">BRECON VIBRATIONSTECHNIK</h2>
                 <p>Als BOSCH Ausgründung liefert BRECON seit 1995 überragende Vibrationstechnik für die Betonverdichtung, Materialverdichtung, Fördertechnik und andere Anwendungen.</p>
                 <a href="#" class="btn btn__outline-accent">mehr über uns</a>
@@ -233,6 +233,63 @@
       </section>
       <!-- know section end  -->
 
+      <!-- products section start -->
+      <section class="products block-margin">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 d-flex align-items-lg-center">
+              <div class="section__content-md">
+                <h2 class="text-accent">PRODUKTE</h2>
+                <p class="mb-30">BRECON hat sich auf die Herstellung intelligenter Vibrationstechnik spezialisiert. Wir bieten clevere Lösungen für alle Anwendungen und Branchen.</p>
+                <p class="mb-30">Von Vibrationsmotoren für die industrielle Produktion wie der Betonverdichtung oder der Fördertechnik bis zu handgehaltenen Werkzeugen wie Innenrüttlern, tragbaren Produkten für die Verdichtung von Isolierungsmasse in Gießereien oder Flächenverdichtern für die Verdichtung beim Hausbau mit ICF (Insulated Concrete Forms) bieten wir eine umfassende Produktpalette.</p>
+                <p class="mb-30">Für maßgefertigte Produkte und mehr Informationen finden Sie alle Kontaktdaten auf unserer Kontaktseite.</p>
+                <p>Wir würden uns freuen Ihnen unsere technische Beratung anbieten zu dürfen.</p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-md-6 mb-5">
+                  <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
+                    <div class="card-header border-0 bg-transparent"><img src="assets/images/product-card-img-1.png" alt="" class="img-fluid"></div>
+                    <div class="card-body">
+                      <h3 class="text__dark">Aussenrüttler</h3>
+                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-5">
+                  <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
+                    <div class="card-header border-0 bg-transparent"><img src="assets/images/product-card-img-2.png" alt="" class="img-fluid"></div>
+                    <div class="card-body">
+                      <h3 class="text__dark">Innenrüttler</h3>
+                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
+                    <div class="card-header border-0 bg-transparent"><img src="assets/images/product-card-img-3.png" alt="" class="img-fluid"></div>
+                    <div class="card-body">
+                      <h3 class="text__dark">Kontrollsysteme</h3>
+                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card border-0 p-4 shadow-md d-flex justify-content-center align-items-center">
+                    <div class="card-header border-0 bg-transparent"><img src="assets/images/product-card-img-4.png" alt="" class="img-fluid"></div>
+                    <div class="card-body">
+                      <h3 class="text__dark">Handgehaltene Verdichtung</h3>
+                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- products section end -->
     </main>
        <!-- footer section start -->
        <footer class="footer">
