--- a/index.html
+++ b/index.html
@@ -290,6 +290,26 @@
         </div>
       </section>
       <!-- products section end -->
+      
+      <!-- solutions section start -->
+      <section class="solution bg__accent text-white">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="assets/images/solution-img.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-8 d-flex align-items-lg-center">
+              <div class="solution__content">
+                <h2>SONDERLÖSUNGEN</h2>
+                <p class="mb-30">Eine der größten Stärken von BRECON. BRECON ist der perfekte Engineering Partner für kundenspezifische Lösungen. Ganz gleich, ob es sich um eine einmalige Vibrationslösung handelt oder um eine kleine Serie.</p>
+                <p class="mb-30">BRECON entwickelt die Lösung für Sie und bietet CAD Design für Industrie Kunden. So können unsere Kunden vollständig von unserer Erfahrung und unserem spezifischem Know-how im Bereich der Vibrationstechnologie profitieren. Für maßgefertigte Produkte und mehr Informationen finden Sie alle Kontaktdaten auf unserer Kontakseite. Wir würden uns freuen Ihnen unsere technische Beratung anbieten zu dürfen.</p>
+                <a href="#" class="btn btn__outline-light">mehr erfahren</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- solutions section end -->
     </main>
        <!-- footer section start -->
        <footer class="footer">
