add application section

--- a/index.html
+++ b/index.html
@@ -310,6 +310,24 @@
         </div>
       </section>
       <!-- solutions section end -->
+
+      <!-- application section start --> 
+      <section class="application bg__gradient">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <h2 class="text-accent">ANWENDUNGEN</h2>
+            </div>
+            <div class="col-lg-8">
+              <div class="application__content">
+                <p class="section__title mb-30">BRECON Produkte können für eine große Vielfalt an Industrieanwendungen verwendet werden. BRECON Außenrüttler, Innenrüttler, Werkzeuge und Kontrollsysteme sind flexibel und anpassungsfähig.</p>
+                <a href="#" class="btn btn__outline-accent">zu den Anwendungen</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- application section end -->
     </main>
        <!-- footer section start -->
        <footer class="footer">
