fix navigation issue

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="assets/css/style.min.css" />
   </head>
 
-  <body>
+  <body id="top">
     <header class="header fixed-top">
       <nav class="navbar navbar-light navbar-expand-xl">
         <div class="container px-xxl-0">
@@ -81,35 +81,131 @@
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">Know-how Center</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Action 1</a>
-                    <a class="dropdown-item" href="#">Action 2</a>
+                    <div class="container">
+                      <div class="row">
+                            <div class="col">
+                              <p>Aussenrüttler</p>
+                              <a class="dropdown-item" href="#">Normalfrequenz-Rüttler</a>
+                              <a class="dropdown-item" href="#">Hochfrequenz-Rüttler</a>
+                              <a class="dropdown-item" href="#">Druckluft-Rüttler</a>
+                              <a class="dropdown-item" href="#">SLIM2-Mobiler Rüttler</a>
+                              <a class="dropdown-item" href="#">Synchronlauf-Rüttler</a>
+                              <a class="dropdown-item" href="#">Mobile Systeme</a>
+                              <a class="dropdown-item" href="#">Gekoppelte Rüttler</a>
+                              <a class="dropdown-item" href="#">Gleichstrom Rüttler</a>
+                            </div>
+                            <div class="col">
+                              <p>Innenrüttler</p>
+                              <a class="dropdown-item" href="#">Innenrüttler für Frequenzumrichter</a>
+                              <a class="dropdown-item" href="#">Innenrüttler mit integriertem Frequenzumrichter</a>
+                              <a class="dropdown-item" href="#">Druckluft-Innenrüttler</a>
+                            </div>
+                            <div class="col">
+                              <p>Kontroll-Systeme</p>
+                              <a class="dropdown-item" href="#">OMNIVIB</a>
+                            </div>
+                            <div class="col">
+                              <p>Handgehaltene Verdichtungen</p>
+                              <a class="dropdown-item" href="#">Rüttelstampfer</a>
+                              <a class="dropdown-item" href="#">Flächenrüttler</a>
+                              <a class="dropdown-item" href="#">Bosch Rüttler</a>
+                            </div>
+                            <div class="col">
+                              <p>Sonderlösungen</p>
+                            </div>
+                      </div>
+                      </div>
                   </div>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">Produkte</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Action 1</a>
-                    <a class="dropdown-item" href="#">Action 2</a>
-                  </div>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                      <div class="container">
+                        <div class="row">
+                              <div class="col">
+                                <p>Aussenrüttler</p>
+                                <a class="dropdown-item" href="#">Normalfrequenz-Rüttler</a>
+                                <a class="dropdown-item" href="#">Hochfrequenz-Rüttler</a>
+                                <a class="dropdown-item" href="#">Druckluft-Rüttler</a>
+                                <a class="dropdown-item" href="#">SLIM2-Mobiler Rüttler</a>
+                                <a class="dropdown-item" href="#">Synchronlauf-Rüttler</a>
+                                <a class="dropdown-item" href="#">Mobile Systeme</a>
+                                <a class="dropdown-item" href="#">Gekoppelte Rüttler</a>
+                                <a class="dropdown-item" href="#">Gleichstrom Rüttler</a>
+                              </div>
+                              <div class="col">
+                                <p>Innenrüttler</p>
+                                <a class="dropdown-item" href="#">Innenrüttler für Frequenzumrichter</a>
+                                <a class="dropdown-item" href="#">Innenrüttler mit integriertem Frequenzumrichter</a>
+                                <a class="dropdown-item" href="#">Druckluft-Innenrüttler</a>
+                              </div>
+                              <div class="col">
+                                <p>Kontroll-Systeme</p>
+                                <a class="dropdown-item" href="#">OMNIVIB</a>
+                              </div>
+                              <div class="col">
+                                <p>Handgehaltene Verdichtungen</p>
+                                <a class="dropdown-item" href="#">Rüttelstampfer</a>
+                                <a class="dropdown-item" href="#">Flächenrüttler</a>
+                                <a class="dropdown-item" href="#">Bosch Rüttler</a>
+                              </div>
+                              <div class="col">
+                                <p>Sonderlösungen</p>
+                              </div>
+                        </div>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">Anwendungen</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Action 1</a>
-                    <a class="dropdown-item" href="#">Action 2</a>
-                  </div>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                      <div class="container">
+                        <div class="row">
+                              <div class="col">
+                                <p>Aussenrüttler</p>
+                                <a class="dropdown-item" href="#">Normalfrequenz-Rüttler</a>
+                                <a class="dropdown-item" href="#">Hochfrequenz-Rüttler</a>
+                                <a class="dropdown-item" href="#">Druckluft-Rüttler</a>
+                                <a class="dropdown-item" href="#">SLIM2-Mobiler Rüttler</a>
+                                <a class="dropdown-item" href="#">Synchronlauf-Rüttler</a>
+                                <a class="dropdown-item" href="#">Mobile Systeme</a>
+                                <a class="dropdown-item" href="#">Gekoppelte Rüttler</a>
+                                <a class="dropdown-item" href="#">Gleichstrom Rüttler</a>
+                              </div>
+                              <div class="col">
+                                <p>Innenrüttler</p>
+                                <a class="dropdown-item" href="#">Innenrüttler für Frequenzumrichter</a>
+                                <a class="dropdown-item" href="#">Innenrüttler mit integriertem Frequenzumrichter</a>
+                                <a class="dropdown-item" href="#">Druckluft-Innenrüttler</a>
+                              </div>
+                              <div class="col">
+                                <p>Kontroll-Systeme</p>
+                                <a class="dropdown-item" href="#">OMNIVIB</a>
+                              </div>
+                              <div class="col">
+                                <p>Handgehaltene Verdichtungen</p>
+                                <a class="dropdown-item" href="#">Rüttelstampfer</a>
+                                <a class="dropdown-item" href="#">Flächenrüttler</a>
+                                <a class="dropdown-item" href="#">Bosch Rüttler</a>
+                              </div>
+                              <div class="col">
+                                <p>Sonderlösungen</p>
+                              </div>
+                        </div>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Download Center</a>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle lang-link" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                <li class="nav-item dropdown lang-item">
+                  <a class="nav-link dropdown-toggle lang-link position-relative" href="#" id="dropdownId" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">DE</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Action 1</a>
-                    <a class="dropdown-item" href="#">Action 2</a>
+                  <div class="dropdown-menu p-3 rounded-2" aria-labelledby="dropdownId">
+                    <a class="dropdown-item" href="#">DE</a>
+                    <a class="dropdown-item" href="#">EN</a>
                   </div>
                 </li>
                 <li class="nav-item">
